# pictool

./: .gitignore  .travis.yml  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pr.yaml
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst  pictool.rst
pictool/: __init__.py  test_basic.py  utils_gexiv.py  utils_opencv.py
pictool/datasets/: wider.py
snap/: snapcraft.yaml
