[metadata]
name = pictool
version = 0.0.1
summary = Random collection of useful things you can do with images
description-file =
    README.rst
author = Thomas Bechtold
author-email = thomasbechtold@jpberlin.de
home-page = https://github.com/toabctl/pictool
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = pictool

[entry_points]
console_scripts =
    pictool = pictool:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
