[metadata]
name = pictool
summary = Random collection of useful things you can do with images
description-file =
    README.rst
author = Thomas Bechtold
author-email = thomasbechtold@jpberlin.de
home-page = https://github.com/toabctl/pictool
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Topic :: Utilities

[files]
packages = pictool

[entry_points]
console_scripts =
    pictool = pictool:main

[wheel]
universal = 1
